2009-01-08  Darren Kenny  <darren.kenny@sun.com>

	* configure.in, daemon/Makefile.am, capplet/Makefile.am,
	  tests/Makefile.am:
	  Add tests for libinetcfg and libkstat.
	* common/nwamui_ncu.h, common/nwamui_ncu.c: 
	  Added code to determine current status of an interface. Made speed a
	  read-only property, obtained directly from the system.  Get current
	  IP address (icfg) and speed (kstat) to show valid status line. 
	* nwam_core/usr/include/libdladm.h,
	  nwam_core/usr/include/libdladm_impl.h,
	  nwam_core/usr/include/libdlaggr.h,
	  nwam_core/usr/include/libdlflow.h,
	  nwam_core/usr/include/libdlflow_impl.h,
	  nwam_core/usr/include/libdllink.h,
	  nwam_core/usr/include/libdlmgmt.h,
	  nwam_core/usr/include/libdlstat.h,
	  nwam_core/usr/include/libdlvlan.h,
	  nwam_core/usr/include/libdlvnic.h,
	  nwam_core/usr/include/libdlwlan.h,
	  nwam_core/usr/include/libdlwlan_impl.h:
	  Update to latest NWAM Phase 1 versions, main change is with libdladm
	  which now requires the passing of a handle to it's functions.

2009-01-08  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (nwamui_obj_combo_cell_cb):
	* capplet/main.c: (customwidgethandler), (main):
	* capplet/nwam-manager-properties.glade:
	Test code for customized Nwam Tree View.
	* capplet/nwam_env_pref_dialog.c: (nwam_env_pref_dialog_init):
	* capplet/nwam_net_conf_panel.c: (nwam_net_conf_panel_init),
	(nwam_treeview_btn_cb):
	* capplet/nwam_tree_view.c: (nwam_tree_view_property_name),
	(nwam_tree_view_class_init), (nwam_tree_view_set_property),
	(nwam_tree_view_get_property), (nwam_tree_view_init),
	(nwam_tree_view_new), (nwam_tree_view_add),
	(nwam_tree_view_remove), (on_button_clicked),
	(nwam_tree_view_key_release), (default_signal_handler_add_object),
	(default_signal_handler_remove_object),
	(default_signal_handler_widget_activate), (delete_selection_cb),
	(nwam_tree_view_row_selected_cb),
	(nwam_tree_view_selection_changed_cb):
	* capplet/nwam_tree_view.h:
	* common/libnwamui.c: